tests/chainsaw/disallow-unapproved-debug-access/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: debug-access-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: unauthorized-debug-access-test
